# depthy-mcp

./: LICENSE  README.md  __main__.py  pyproject.toml  server.py
