[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depthy-mcp"
version = "0.1.0"
description = "MCP server for Depthy — real-time crypto liquidity intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Depthy", email = "hello@depthy.io" }]
keywords = ["mcp", "crypto", "liquidity", "order-book", "hyperliquid", "polymarket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://depthy.io"
Documentation = "https://depthy.io/api-docs"
Repository = "https://github.com/depthy-io/depthy-mcp"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
